Fixed window title alignment

--- a/public_html/css/main.css
+++ b/public_html/css/main.css
@@ -206,14 +206,6 @@ body {
 .WindowTop img {
   float : left;
 }
-.WindowTopInner span {
-  padding-left : 15px;
-  padding-right : 45px;
-}
-.Window.Dialog .WindowTopInner span {
-  padding-left : 0;
-  padding-right : 20px;
-}
 .WindowTopControllers {
   position : absolute;
   top : 0px;
